Issue #4653: fix typo in flush_std_files()

Don't call sys.stderr.flush() if sys has no stderr attribute or if
sys.stderr==None.